--- a/dashboard/src/components/widget/list/che-list-item.styl
+++ b/dashboard/src/components/widget/list/che-list-item.styl
@@ -36,7 +36,7 @@
   span:not(.tooltip)
     max-width 100%
     white-space nowrap
-    margin-right 5px
+    padding-right 3px
 
   & .che-xs-header
     display inline-block
@@ -84,6 +84,10 @@
     max-height 16px
     line-height 16px
     margin-right 10px
+
+    span
+      padding-right 0
+
 
   .tooltip
     color $white-color
